--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.botpy.constrainlayoutexample">
 
-
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -18,6 +17,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ManualConstraintActivity"
+            android:label="@string/title_activity_manual_constraint"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
