--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
@@ -20,9 +21,9 @@ allprojects {
     repositories {
         jcenter()
         maven {
-            url 'https://maven.google.com/'
-            name 'Google'
+            url "https://jitpack.io"
         }
+        google()
     }
 }
 
